@@ -54,6 +54,7 @@ static struct TableList* _resizeAsNeeded(struct Table* table, struct TableList* 
 
 static void _removeItemFromList(struct Table* table, struct TableList* list, size_t item) {
 	--list->nEntries;
+	--table->size;
 	free(list->list[item].stringKey);
 	if (table->deinitializer) {
 		table->deinitializer(list->list[item].value);
@@ -119,6 +120,7 @@ void TableInsert(struct Table* table, uint32_t key, void* value) {
 	list->list[list->nEntries].stringKey = 0;
 	list->list[list->nEntries].value = value;
 	++list->nEntries;
+	++table->size;
 }
 
 void TableRemove(struct Table* table, uint32_t key) {
@@ -156,6 +158,10 @@ void TableEnumerate(const struct Table* table, void (handler(uint32_t key, void*
 	}
 }
 
+size_t TableSize(const struct Table* table) {
+	return table->size;
+}
+
 void* HashTableLookup(const struct Table* table, const char* key) {
 	uint32_t hash = hash32(key, strlen(key), 0);
 	const struct TableList* list;
@@ -181,6 +187,7 @@ void HashTableInsert(struct Table* table, const char* key, void* value) {
 	list->list[list->nEntries].keylen = strlen(key);
 	list->list[list->nEntries].value = value;
 	++list->nEntries;
+	++table->size;
 }
 
 void HashTableRemove(struct Table* table, const char* key) {
@@ -218,4 +225,8 @@ void HashTableEnumerate(const struct Table* table, void (handler(const char* key
 			handler(list->list[j].stringKey, list->list[j].value, user);
 		}
 	}
+}
+
+size_t HashTableSize(const struct Table* table) {
+	return table->size;
 }
