@@ -39,6 +39,7 @@ Misc:
  - Debugger: Make building with debugging aspects optional
  - GBA Memory: Support for Mo Jie Qi Bing by Vast Fame (taizou)
  - GBA Memory: Support reading/writing POSTFLG
+ - Util: Add size counting to Table
 
 0.5.1: (2016-10-05)
 Bugfixes:
